editor pattern (prev. checker) ; move editor out of integration_easy_setup

--- a/engine/source/engine/todo.txt
+++ b/engine/source/engine/todo.txt
@@ -19,6 +19,9 @@ CURRENT ---------------
 
 DONE ------------------
 
+02/02/2021
+- editor pattern (prev. checker)
+
 28/02/2021
 - editor mouse drag & zoom
 - window resizing
